--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.6.0",
-    "framer-motion": "^11.15.0",
+    "framer-motion": "^11.18.2",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.469.0",
+    "motion": "^12.34.3",
+    "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.0.0",
